--- a/Corona-Warn-App/src/main/res/layout/activity_link_test.xml
+++ b/Corona-Warn-App/src/main/res/layout/activity_link_test.xml
@@ -28,6 +28,7 @@
                 android:id="@+id/web_view"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
+                android:importantForAutofill="noExcludeDescendants"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
