--- a/Corona-Warn-App/src/main/res/layout/include_submission_status_card_unregistered.xml
+++ b/Corona-Warn-App/src/main/res/layout/include_submission_status_card_unregistered.xml
@@ -15,14 +15,13 @@
             style="@style/headline5"
             android:layout_width="@dimen/match_constraint"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/card_padding"
             android:layout_marginTop="@dimen/card_padding"
-            android:layout_marginEnd="@dimen/spacing_small"
+            android:layout_marginEnd="@dimen/spacing_medium"
             android:accessibilityHeading="true"
             android:focusable="false"
             android:text="@string/submission_status_card_title_unregistered"
-            app:layout_constraintEnd_toStartOf="@+id/submission_status_card_unregistered_icon"
-            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/submission_status_card_unregistered_icon"
             app:layout_constraintTop_toTopOf="parent" />
 
 
@@ -31,12 +30,12 @@
             style="@style/subtitleMedium"
             android:layout_width="@dimen/match_constraint"
             android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/card_padding"
+            android:layout_marginStart="@dimen/spacing_medium"
             android:layout_marginTop="@dimen/spacing_normal"
-            android:layout_marginEnd="@dimen/spacing_small"
+            android:layout_marginEnd="@dimen/spacing_medium"
             android:focusable="false"
             android:text="@string/submission_status_card_body_unregistered"
-            app:layout_constraintEnd_toStartOf="@+id/submission_status_card_unregistered_icon"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/submission_status_card_unregistered_title" />
 
@@ -46,58 +45,54 @@
             android:layout_width="@dimen/match_constraint"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/card_padding"
-            android:layout_marginTop="@dimen/spacing_normal"
-            android:layout_marginEnd="@dimen/spacing_small"
+            android:layout_marginTop="@dimen/spacing_medium"
+            android:layout_marginEnd="@dimen/spacing_medium"
+            android:layout_marginBottom="@dimen/spacing_medium"
             android:focusable="false"
             android:text="@string/submission_status_card_body_unregistered_warning"
             android:textColor="@color/colorSemanticHighRisk"
-            app:layout_constraintEnd_toStartOf="@+id/submission_status_card_unregistered_icon"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/submission_status_card_unregistered_body" />
-
-        <Button
-            android:id="@+id/submission_status_card_unregistered_button"
-            style="@style/buttonPrimary"
-            android:layout_width="@dimen/match_constraint"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/card_padding"
-            android:layout_marginTop="@dimen/spacing_normal"
-            android:layout_marginEnd="@dimen/card_padding"
-            android:text="@string/submission_status_card_button_unregistered"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/submission_status_card_unregistered_barrier" />
-
-        <Button
-            android:id="@+id/submission_status_card_registered_button"
-            style="@style/buttonPrimary"
-            android:layout_width="@dimen/match_constraint"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="@dimen/card_padding"
-            android:layout_marginTop="@dimen/spacing_normal"
-            android:layout_marginEnd="@dimen/card_padding"
-            android:layout_marginBottom="@dimen/card_padding"
-            android:backgroundTint="@color/card_unknown"
-            android:text="@string/submission_status_card_button_registered"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/submission_status_card_unregistered_button" />
 
+        <Button
+            android:id="@+id/submission_status_card_unregistered_button"
+            style="@style/buttonPrimary"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/card_padding"
+            android:layout_marginTop="@dimen/spacing_medium"
+            android:backgroundTint="@color/colorTextTint"
+            android:text="@string/submission_status_card_button_unregistered"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/submission_status_card_unregistered_body"
+            app:layout_constraintWidth_percent="0.4" />
+
+        <Button
+            android:id="@+id/submission_status_card_registered_button"
+            style="@style/buttonPrimary"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/spacing_medium"
+            android:layout_marginEnd="@dimen/card_padding"
+            android:text="@string/submission_status_card_button_registered"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/submission_status_card_unregistered_button"
+            app:layout_constraintTop_toTopOf="@+id/submission_status_card_unregistered_button"
+            app:layout_constraintWidth_percent="0.4" />
+
         <ImageView
             android:id="@+id/submission_status_card_unregistered_icon"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_marginTop="8dp"
             android:importantForAccessibility="no"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/submission_status_card_unregistered_title"
-            app:srcCompat="@drawable/ic_main_illustration_untested" />
+            android:tint="@color/colorSemanticLowRisk"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/ic_tools_test_reservation_illustration" />
 
-        <androidx.constraintlayout.widget.Barrier
-            android:id="@+id/submission_status_card_unregistered_barrier"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            app:barrierDirection="bottom"
-            app:constraint_referenced_ids="submission_status_card_unregistered_icon,submission_status_card_unregistered_body_warning" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
