--- a/Corona-Warn-App/src/main/res/layout/fragment_main.xml
+++ b/Corona-Warn-App/src/main/res/layout/fragment_main.xml
@@ -322,6 +322,17 @@
                 app:constraint_referenced_ids="main_test_done, main_risk" />
 
             <include
+                android:id="@+id/covicode"
+                layout="@layout/include_covicode_card"
+                android:layout_width="@dimen/match_constraint"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/spacing_small"
+                app:layout_constraintEnd_toStartOf="@+id/guideline_card_end"
+                app:layout_constraintStart_toStartOf="@+id/guideline_card_start"
+                app:layout_constraintTop_toBottomOf="@+id/main_barrier" />
+
+
+            <include
                 android:id="@+id/statistics"
                 layout="@layout/include_statistics_card"
                 android:layout_width="@dimen/match_constraint"
@@ -329,7 +340,7 @@
                 android:layout_marginTop="@dimen/spacing_small"
                 app:layout_constraintEnd_toStartOf="@+id/guideline_card_end"
                 app:layout_constraintStart_toStartOf="@+id/guideline_card_start"
-                app:layout_constraintTop_toBottomOf="@+id/main_barrier" />
+                app:layout_constraintTop_toBottomOf="@+id/covicode" />
 
             <include
                 android:id="@+id/main_about"
