--- a/Corona-Warn-App/src/main/res/layout/include_vaccination_card.xml
+++ b/Corona-Warn-App/src/main/res/layout/include_vaccination_card.xml
@@ -6,6 +6,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/vaccination_card"
         style="@style/card"
+        android:visibility="gone"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
