--- a/Corona-Warn-App/src/main/res/layout/include_submission_status_card_unregistered.xml
+++ b/Corona-Warn-App/src/main/res/layout/include_submission_status_card_unregistered.xml
@@ -15,6 +15,7 @@
             style="@style/headline5"
             android:layout_width="@dimen/match_constraint"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_marginTop="@dimen/card_padding"
             android:layout_marginEnd="@dimen/spacing_medium"
             android:accessibilityHeading="true"
@@ -84,14 +85,15 @@
 
         <ImageView
             android:id="@+id/submission_status_card_unregistered_icon"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_marginTop="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="24dp"
+            android:layout_marginTop="24dp"
             android:importantForAccessibility="no"
             android:tint="@color/colorSemanticLowRisk"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/ic_tools_test_reservation_illustration" />
+            app:srcCompat="@drawable/ic_submission_test" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
