--- a/Corona-Warn-App/src/main/res/layout/fragment_covicode.xml
+++ b/Corona-Warn-App/src/main/res/layout/fragment_covicode.xml
@@ -77,6 +77,7 @@
                     android:layout_marginEnd="24dp"
                     android:focusable="true"
                     android:text="@string/covicode_explanation"
+                    android:autoLink="phone"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/covicode_headline_text" />
