--- a/Corona-Warn-App/src/main/res/layout/include_vaccination_card.xml
+++ b/Corona-Warn-App/src/main/res/layout/include_vaccination_card.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/vaccination_card"
         style="@style/card"
-        android:visibility="gone"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:visibility="gone">
 
         <TextView
             android:id="@+id/vaccination_card_text_title"
@@ -39,7 +39,7 @@
             tools:text="20 000 000" />
 
         <TextView
-            android:id="@+id/vaccination_vaccinated"
+            android:id="@+id/vaccination_2_dose"
             style="@style/headline5"
             android:layout_width="@dimen/match_constraint"
             android:layout_height="wrap_content"
@@ -47,11 +47,36 @@
             android:layout_marginTop="@dimen/spacing_small"
             android:focusable="false"
             android:gravity="center"
-            tools:text="10 000 000"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/view"
-            app:layout_constraintTop_toBottomOf="@+id/vaccination_card_text_title" />
+            app:layout_constraintTop_toBottomOf="@+id/vaccination_card_text_title"
+            tools:text="10 000 000" />
+
+        <TextView
+            android:id="@+id/vaccination_3_dose"
+            style="@style/headline5"
+            android:layout_width="@dimen/match_constraint"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="16dp"
+            android:layout_marginTop="@dimen/spacing_small"
+            android:focusable="false"
+            android:gravity="center"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/view"
+            tools:text="10 000 000" />
+
+        <TextView
+            android:id="@+id/vaccination_3_dose_label"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/vaccination_3_dose"
+            app:layout_constraintEnd_toEndOf="@+id/vaccination_3_dose"
+            app:layout_constraintStart_toStartOf="@+id/vaccination_3_dose"
+            app:layout_constraintTop_toBottomOf="@+id/vaccination_3_dose" />
+
 
         <ImageView
             android:id="@+id/imageView"
@@ -69,25 +94,25 @@
             app:layout_constraintBottom_toBottomOf="@+id/vaccination_1_dose_label"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/vaccination_vaccinated" />
+            app:layout_constraintTop_toTopOf="@+id/vaccination_2_dose" />
 
         <TextView
             android:id="@+id/vaccination_1_dose_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/vaccination_at_least_1_dose"
+            android:text="@string/vaccination_1_dose"
             app:layout_constraintEnd_toEndOf="@+id/vaccination_1_dose"
             app:layout_constraintStart_toStartOf="@+id/vaccination_1_dose"
             app:layout_constraintTop_toBottomOf="@+id/vaccination_1_dose" />
 
         <TextView
-            android:id="@+id/vaccination_vaccinated_label"
+            android:id="@+id/vaccination_2_dose_label"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/vaccination_fully_vaccinated"
-            app:layout_constraintEnd_toEndOf="@+id/vaccination_vaccinated"
-            app:layout_constraintStart_toStartOf="@+id/vaccination_vaccinated"
-            app:layout_constraintTop_toBottomOf="@+id/vaccination_vaccinated" />
+            android:text="@string/vaccination_2_dose"
+            app:layout_constraintEnd_toEndOf="@+id/vaccination_2_dose"
+            app:layout_constraintStart_toStartOf="@+id/vaccination_2_dose"
+            app:layout_constraintTop_toBottomOf="@+id/vaccination_2_dose" />
 
         <TextView
             android:id="@+id/vaccination_update_text"
@@ -99,7 +124,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/vaccination_1_dose_label"
+            app:layout_constraintTop_toBottomOf="@+id/vaccination_3_dose_label"
             tools:text="Last updated on 2 Sep 2020 at 11:03" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
